--- a/fastlane/metadata/hr/release_notes.txt
+++ b/fastlane/metadata/hr/release_notes.txt
@@ -1,1 +1,1 @@
-• It's always OK to change your mind, so we fixed a bug that caused the image picker to open after pasting an attachment into a chat and then deciding not to send it.
+• Ispravili smo programsku pogrešku koja je povremeno uzrokovala pokretanje alata za odabir slike nakon lijepljenja privitka u razgovor.
