--- a/fastlane/metadata/el/release_notes.txt
+++ b/fastlane/metadata/el/release_notes.txt
@@ -1,1 +1,1 @@
-• It's always OK to change your mind, so we fixed a bug that caused the image picker to open after pasting an attachment into a chat and then deciding not to send it.
+• Διορθώσαμε ένα σφάλμα που μπορούσε να προκαλέσει το άνοιγμα του επιλογέα εικόνων μετά την επικόλληση ενός συνημμένου σε μια συνομιλία.
