--- a/fastlane/metadata/es-MX/release_notes.txt
+++ b/fastlane/metadata/es-MX/release_notes.txt
@@ -1,1 +1,1 @@
-• It's always OK to change your mind, so we fixed a bug that caused the image picker to open after pasting an attachment into a chat and then deciding not to send it.
+• Cambiar de opinión siempre es válido, así que hemos corregido un error que hacía que se abriera el selector de imágenes si pegabas un archivo adjunto en un chat y luego decidías no enviarlo.
