--- a/fastlane/metadata/hi/release_notes.txt
+++ b/fastlane/metadata/hi/release_notes.txt
@@ -1,1 +1,1 @@
-• It's always OK to change your mind, so we fixed a bug that caused the image picker to open after pasting an attachment into a chat and then deciding not to send it.
+• मन कभी भी बदल सकता है, इसलिए हमने उस गड़बड़ी को ठीक कर दिया है जिसकी वजह से चैट में अटैचमेंट पेस्ट करने और उसे भेजने का फ़ैसला न करने के बाद इमेज पिकर खुल जाता था।
