--- a/fastlane/metadata/hu/release_notes.txt
+++ b/fastlane/metadata/hu/release_notes.txt
@@ -1,1 +1,1 @@
-• It's always OK to change your mind, so we fixed a bug that caused the image picker to open after pasting an attachment into a chat and then deciding not to send it.
+Javítottunk egy hibát, amely miatt a képválasztó megnyílhat, miután csatoltál egy mellékletet a csevegéshez, amit később mégsem küldtél el.
