--- a/fastlane/metadata/it/release_notes.txt
+++ b/fastlane/metadata/it/release_notes.txt
@@ -1,1 +1,1 @@
-• It's always OK to change your mind, so we fixed a bug that caused the image picker to open after pasting an attachment into a chat and then deciding not to send it.
+• Cambiare idea è normale, ecco perché abbiamo risolto un bug che causa un comportamento anomalo nel selettore delle immagini, che si apriva dopo aver incollato un allegato in chat e poi aver deciso di non inviarlo.
