--- a/fastlane/metadata/no/release_notes.txt
+++ b/fastlane/metadata/no/release_notes.txt
@@ -1,1 +1,1 @@
-• It's always OK to change your mind, so we fixed a bug that caused the image picker to open after pasting an attachment into a chat and then deciding not to send it.
+• Vi rettet opp i en feil som førte til at bildevelgeren plutselig dukket opp etter innliming av et vedlegg i en samtale.
