--- a/fastlane/metadata/ru/release_notes.txt
+++ b/fastlane/metadata/ru/release_notes.txt
@@ -1,1 +1,1 @@
-• It's always OK to change your mind, so we fixed a bug that caused the image picker to open after pasting an attachment into a chat and then deciding not to send it.
+• Всегда можно передумать, поэтому мы исправили ошибку, из-за которой меню изображений открывалось после того, как вы помещали вложение в чат, а затем решали его не отправлять.
