--- a/fastlane/metadata/th/release_notes.txt
+++ b/fastlane/metadata/th/release_notes.txt
@@ -1,1 +1,1 @@
-• It's always OK to change your mind, so we fixed a bug that caused the image picker to open after pasting an attachment into a chat and then deciding not to send it.
+• เราแก้ไขบั๊กที่เคยทำให้แอปเปิดกล่องตัวเลือกรูปภาพขึ้นมาเมื่อมีการกดวางไฟล์แนบลงในแชท
