--- a/fastlane/metadata/uk/release_notes.txt
+++ b/fastlane/metadata/uk/release_notes.txt
@@ -1,1 +1,1 @@
-• It's always OK to change your mind, so we fixed a bug that caused the image picker to open after pasting an attachment into a chat and then deciding not to send it.
+• Вікно вибору зображень більше не відкриватиметься, якщо ви вставили файл у чат, а потім передумали його надсилати. Змінювати рішення — це нормально, тож ми виправили цю помилку.
